Fix vertical alignment in pending location list

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,9 +119,30 @@
 /* Admin - Locations Form                                                     */
 /* ========================================================================== */
 
-#modify-locations .location-list{
+#modify-locations .pending-list{
+  border-top: solid 1px #ddd;
+}
+
+#modify-locations .location-item{
   padding:5px 10px;
-  border-bottom: solid 2px black;
+  display: table;
+  width: 100%;
+  border-bottom: solid 1px #ddd;
+}
+
+#modify-locations .location-item .location-label{
+  display: table-cell;
+  vertical-align: middle;
+}
+
+#modify-locations .location-item .location-label label{
+  margin:0;
+  font-size: 16px;
+}
+
+#modify-locations .location-item .location-buttons{
+  display: table-cell;
+  float: right;
 }
 
 #modify-locations .del {
